fix(index.css): remove extra padding/margin

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   /* Color Palette */
@@ -10,3 +11,8 @@
 
 }
 
+html, body {
+  margin: 0 !important;
+  padding: 0 !important;
+}
+  
